--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+
+.App{
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1)), 
+  url('https://dulichkhatvongviet.com/wp-content/uploads/2020/08/ha_giang.jpg') 
+  no-repeat center/cover;
+}
+.weather{
+  width: 360px;
+  height: 80%;
+  background-color: #2691d9;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+  url('https://dulichkhatvongviet.com/wp-content/uploads/2020/08/ha_giang.jpg') no-repeat center/cover;
+}
+
+.temp{
+  margin-top: 32px;
+  width: 80%;
+  padding: 32px 0;
   text-align: center;
+  font-size: 64px;
+  text-shadow: 4px 4px rgb(0 0 0 / 60%);
+  font-weight: bold;
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 15px;
+  box-shadow: 2px 2px 0 2px rgb(0 0 0 / 50%);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.temp img{
+  top: 16px;
+  width: 40px;
+  right: 20%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.temp .temp-icon{
+  position: relative;
+  margin-left: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.temp .temp-icon span{
+  font-size: 40px;
+  position: absolute;
+  top: -12px;
+  right: 34px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-item{
+  font-size: 18px;
 }
